Version Next

    - Added "-s" flag to specify alternate column separator

Version 1.0.0 Released September 2, 2021

    - Initial release